# doc-utils

./: .gitignore  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  archive_unused_files.md  archive_unused_files.py  archive_unused_images.md  archive_unused_images.py  batch-convert-callouts.sh  check_published_links.py  check_scannability.md  check_scannability.py  check_source_directives.py  classify-guides.py  convert_callouts_interactive.py  convert_callouts_to_deflist.py  convert_freemarker_to_asciidoc.py  convert_id_attributes_to_ids.py  convert_tables_to_deflists.py  doc_utils_cli.py  extract_link_attributes.py  find_duplicate_content.py  find_duplicate_includes.py  find_unused_attributes.md  find_unused_attributes.py  fix_admonition_delimiters.py  fixtures-README-legacy.txt  format-asciidoc-spacing.py  format_asciidoc_spacing.md  format_asciidoc_spacing.py  insert_abstract_role.py  insert_procedure_title.py  inventory_conditionals.py  pyproject.toml  replace-link-attributes.md  replace_link_attributes.py  scannable.py  (+7 more)
.archive/: SLACK_NOTE_FOR_TESTER.md
.archive/root-docs-cleanup/: RELEASE_NOTES_DRAFT.md  RELEASE_TEMPLATE.md  archive_unused_files.md  archive_unused_images.md  check_scannability.md  find_unused_attributes.md
.github/workflows/: pypi-publish.yml
callout_lib/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  converter_bullets.py  converter_comments.py  converter_deflist.py  detector.py  table_parser.py
claude-plans/: improve-classify-guides.md
doc_utils/: __init__.py  convert_freemarker_to_asciidoc.py  duplicate_content.py  duplicate_includes.py  extract_link_attributes.py  file_utils.py  format_asciidoc_spacing.py  insert_abstract_role.py  inventory_conditionals.py  llm_classifier.py  missing_source_directive.py  obsidian_to_pandoc.py  replace_link_attributes.py  scannability.py  spinner.py  topic_map_parser.py  unused_adoc.py  unused_attributes.py  unused_images.py  validate_links.py  version.py  version_check.py  warnings_report.py
docs/: _config.yml  best-practices.md  content-reuse-assessment.md  contributing.md  getting-started.md  index.md
docs/tools/: archive-unused-files.md  archive-unused-images.md  check-published-links.md  check-scannability.md  check-source-directives.md  classify-guides.md  convert-callouts-interactive.md  convert-callouts-to-deflist.md  convert-freemarker-to-asciidoc.md  convert-id-attributes-to-ids.md  convert-tables-to-deflists.md  extract-link-attributes.md  find-duplicate-content.md  find-duplicate-includes.md  find-unused-attributes.md  fix-bare-urls.md  format-asciidoc-spacing.md  index.md  insert-abstract-role.md  insert-procedure-title.md  inventory-conditionals.md  obsidian-to-pandoc.md  replace-link-attributes.md  validate-links.md
other/: creation.md  creation.pptx  preso.md
test-files/: proc-debezium-db2-triggering-an-incremental-snapshot.adoc
tests/: README.md  test_archive_unused_files.py  test_archive_unused_images.py  test_auto_discovery.py  test_check_scannability.py  test_classify_guides.py  test_cli_entry_points.py  test_convert_tables_to_deflists.py  test_extract_link_attributes.py  test_file_utils.py  test_fixture_archive_unused_files.py  test_fixture_check_scannability.py  test_inventory_conditionals.py  test_parse_exclude_list.py  test_replace_link_attributes.py  test_symlink_handling.py  test_table_callout_conversion.py  test_table_parser.py  test_topic_map_parser.py  test_unused_attributes.py  test_validate_links.py  test_version_check.py
tests/fixtures/: README.md
