[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rolfedh-doc-utils"
version = "0.1.42"
description = "CLI tools for AsciiDoc documentation projects"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name="Rolfe Dlugy-Hegwer" }
]
dependencies = ["PyYAML>=6.0"]

[project.scripts]
doc-utils = "doc_utils_cli:main"
check-scannability = "check_scannability:main"
archive-unused-files = "archive_unused_files:main"
archive-unused-images = "archive_unused_images:main"
find-unused-attributes = "find_unused_attributes:main"
format-asciidoc-spacing = "format_asciidoc_spacing:main"
replace-link-attributes = "replace_link_attributes:main"
extract-link-attributes = "extract_link_attributes:main"
validate-links = "validate_links:main"
convert-callouts-to-deflist = "convert_callouts_to_deflist:main"
convert-callouts-interactive = "convert_callouts_interactive:main"
check-source-directives = "check_source_directives:main"
convert-tables-to-deflists = "convert_tables_to_deflists:main"
check-published-links = "check_published_links:main"
convert-freemarker-to-asciidoc = "convert_freemarker_to_asciidoc:main"
inventory-conditionals = "inventory_conditionals:main"
find-duplicate-content = "find_duplicate_content:main"
find-duplicate-includes = "find_duplicate_includes:main"
insert-abstract-role = "insert_abstract_role:main"
insert-procedure-title = "insert_procedure_title:main"
convert-id-attributes-to-ids = "convert_id_attributes_to_ids:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["doc_utils*", "callout_lib*"]

[tool.setuptools]
py-modules = ["doc_utils_cli", "find_unused_attributes", "check_scannability", "archive_unused_files", "archive_unused_images", "format_asciidoc_spacing", "replace_link_attributes", "extract_link_attributes", "validate_links", "convert_callouts_to_deflist", "convert_callouts_interactive", "check_source_directives", "convert_tables_to_deflists", "check_published_links", "convert_freemarker_to_asciidoc", "inventory_conditionals", "find_duplicate_content", "find_duplicate_includes", "insert_abstract_role", "insert_procedure_title", "convert_id_attributes_to_ids"]